fix/image size and spacing

--- a/themes/antonija/assets/scss/styles.scss
+++ b/themes/antonija/assets/scss/styles.scss
@@ -275,7 +275,7 @@ body {
       grid-template-columns: 1fr;
       grid-template-rows: 1fr 1fr;
       grid-row-gap: 1rem;
-      margin-bottom: 3rem;
+      margin-bottom: 5rem;
 
       @include tablet-s {
         grid-template-columns: 1fr 3fr;
@@ -283,11 +283,9 @@ body {
         grid-column-gap: 2rem;
         grid-row-gap: 0;
         align-items: flex-start;
-        margin-bottom: 3rem;
-      }
-      @include tablet {
         margin-bottom: 4rem;
       }
+
       @include tablet-l {
         margin-bottom: 5rem;
       }
@@ -297,7 +295,7 @@ body {
 
       &__image {
         margin: 0 auto;
-        width: 60%;
+        width: 70%;
         align-self: center;
         height: 100%;
         object-fit: cover;
